--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>JavaScript Error Handling</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<main style="display: flex; justify-content: center; align-items: center; text-align: center">
+		<main id="main-content">
 			<div>
 				<h1>JavaScript Error Handling</h1>
 				<p>Open the Browser Console to view your work (Right-Click => Inspect or fn+F12)</p>
+				<h4>Log</h4>
+				<p id="log"></p>
+				<input id="reload" type="button" value="Reload Page" onClick="window.location.reload(true)">
 			</div>
 		</main>
 
