--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>JavaScript Error Handling</title>
-		<link rel="stylesheet" href="style.css">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap">
-	</head>
-	<body>
-		<main id="main-content">
-			<div>
-				<h1>JavaScript Error Handling</h1>
-				<p>Open the Browser Console to view your work (Right-Click => Inspect or fn+F12)</p>
-				<h4>Log</h4>
-				<p id="log"></p>
-				<input id="reload" type="button" value="Reload Page" onClick="window.location.reload(true)">
-			</div>
-		</main>
 
-		<script src="app.js"></script>
-	</body>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>JavaScript Error Handling</title>
+	<link rel="stylesheet" href="style.css" />
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+	<main id="main-content">
+		<div>
+			<h1>JavaScript Error Handling</h1>
+			<p>Open the Browser Console to view your work (Right-Click => Inspect or fn+F12)</p>
+			<h4>Log</h4>
+			<p id="log"></p>
+			<input id="reload" type="button" value="Reload Page" onClick="window.location.reload(true)">
+		</div>
+	</main>
+
+	<script src="app.js"></script>
+</body>
+
 </html>
